Updates to dd login

--- a/webservice/templates/data_dispatcher_overview.html
+++ b/webservice/templates/data_dispatcher_overview.html
@@ -18,27 +18,11 @@
 {%block content %}
 <input id="tokenLifespan" value="{{timestamp}}" hidden>
 <div class="ui horizontal segments">
-	<div class="ui segment raised" style="width: 20%;">
-		<h3>Sign in with password</h3>
-		<div class=menu>
-            <div class="item">
-                <label for="username">Username</label>
-                <input id="username" type="text">
-            </div>
-            <div class="item">
-                <label for="password">Password</label>
-                <input id="password" type="password" >
-            </div>
-            <div class="item">
-                <button class="login_submit" id="login_password">Login</button>
-            </div>
-		</div>
-	</div>
     <div class="ui segment raised" style="width: 20%;">
-		<h3>Sign in as poms</h3>
+		<h3>POMS Sign-in</h3>
 		<div class=menu>
             <div class="item">
-                <button class="login_submit" id="login_token">Login</button>
+                <button class="login_submit" id="login_token">Reset Token</button>
             </div>
 		</div>
 	</div>
