--- a/webservice/templates/login_setup_edit.html
+++ b/webservice/templates/login_setup_edit.html
@@ -76,7 +76,7 @@
     <tfoot>
       <tr>
         <th colspan="5">
-          <button class="ui labled teal icon button" onclick="add_template();return false;") {{ 'disabled' if (session_role=='superuser') }}>
+          <button class="ui labled teal icon button" onclick="add_template();return false;" {{ 'disabled' if (session_role=='superuser') }}>
             <i class="icon add square"></i>
             Add
           </button>
