* updated jobsub wrapper to fetch correct url * data dispatcher and metacat client moved to cherrypy session * UI Updates * Optimized campaign stage submissions for data dispatcher, so we only query unique queries, and uses db joins instead of relationships to fetch all necessary stage data at once, rather than 1 stage at a time.

--- a/webservice/templates/data_dispatcher_overview.html
+++ b/webservice/templates/data_dispatcher_overview.html
@@ -10,7 +10,7 @@
 <div class="dd-banner">
     This is a fixed top banner.
 </div>
-<h1 class="ui header">POMS Data Dispatcher testing page (temporary)</h1>
+<h1 class="ui header">POMS Shrek Admin</h1>
 <h2 class="sub header">Method Called: {{method}}</h2>
 <script src="{{pomspath}}/static/js/data_dispatcher.js"></script>
 {%endblock%}
