--- a/webservice/static/css/gui_editor_3.css
+++ b/webservice/static/css/gui_editor_3.css
@@ -1,3 +1,66 @@
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    z-index: 1;
+    border: 5px solid black;
+}
+#draggableArea{
+    border: 2px ridge black;
+    background-color: #5394ed;
+    padding: 5px;
+}
+.draggableModal{
+    position:relative;
+}
+td{
+    text-align: left;
+    padding:2px !important;
+}
+td a{
+    text-align: left;
+    width: 200px;
+    display: inline-block;
+}
+td input[type="text"], td select{
+    text-align: left;
+    width: 300px;
+    display: inline-block;
+    padding: 2px;
+}
+td input:disabled{
+    background-color: rgba(175, 175, 175, 0.458);
+}
+.card-header h2{
+    margin-top: 5px;
+}
+.card-body{
+    margin-top: 10px;
+}
+.modal-content {
+    background-color: #fff;
+    padding: 0;
+    width: min-content;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    text-align: left;
+    border: 2px ridge black;
+}
+.modal-content table {
+    margin: 5px;
+}
+
+/* Close button styles */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
 
 div.gui_editor_frame {
     width: 100%;
